--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.travelguide"
+    package="com.example.slideoutmenu"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="16" />
 
     <application
         android:allowBackup="true"
@@ -14,22 +14,22 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.travelguide.MainActivity"
-            android:label="@string/app_name" 
+            android:name="com.example.slideoutmenu.MainActivity"
+            android:label="@string/app_name"
             android:configChanges="orientation"
-		    android:screenOrientation="portrait">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AppScreen"
-    		android:label="@string/start_title">
-		</activity>
-		<activity android:name=".AboutScreen"
-    		android:label="@string/about_title">
-		</activity>
+        <activity android:name=".LayerStack"
+                  android:label="@string/start_title">
+        </activity>
+        <activity android:name=".AboutScreen"
+                  android:label="@string/about_title">
+        </activity>
     </application>
 
 </manifest>
